--- a/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/common/loginScreen.fxml
+++ b/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/common/loginScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rt.ispwproject.graphicControllers.jfxGraphicControllers.LoginGfxControllerJfx">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rt.ispwproject.graphiccontrollers.jfxgraphiccontrollers.LoginGfxControllerJfx">
    <top>
       <BorderPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="65.0" prefWidth="720.0" style="-fx-background-color: E69E0F;" BorderPane.alignment="CENTER">
          <center>
