--- a/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/travelAgency/myOffersScreen.fxml
+++ b/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/travelAgency/myOffersScreen.fxml
@@ -3,13 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rt.ispwproject.graphiccontrollers.jfxgraphiccontrollers.MyAnnouncementsGfxControllerJfx">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rt.ispwproject.graphiccontrollers.jfxgraphiccontrollers.MyOffersGfxControllerJfx">
    <top>
       <BorderPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="55.0" prefWidth="600.0" style="-fx-background-color: E69E0F;" BorderPane.alignment="CENTER">
          <left>
@@ -23,19 +26,25 @@
             </Text>
          </left>
          <center>
-            <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER" prefHeight="55.0" prefWidth="399.0" spacing="20.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button id="myAnnouncements_btn" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" style="-fx-border-color: #2B2B2B; -fx-background-color: FFFFFF; -fx-background-radius: 4px; -fx-border-radius: 4px; -fx-background-insets: 1px;" text="My announcements" textFill="#e69e0f">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets></Button>
-                  <Button id="createAnnouncement_btn" mnemonicParsing="false" onMouseClicked="#onCreateAnnouncementClick" prefHeight="40.0" prefWidth="210.0" style="-fx-background-color: E69E0F; -fx-background-radius: 4px; -fx-border-color: #2B2B2B; -fx-border-radius: 4px; -fx-background-insets: 1px;" text="Create announcement" textFill="WHITE">
+                  <Button id="myAnnouncements_btn" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 4px; -fx-border-color: #2B2B2B; -fx-border-radius: 4px; -fx-background-insets: 1px;" text="My offers" textAlignment="CENTER" textFill="#e69e0f">
                      <font>
                         <Font size="18.0" />
                      </font></Button>
+                  <ToolBar prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #EBEBEB; -fx-background-radius: 8;">
+                     <items>
+                        <TextField prefHeight="30.0" prefWidth="230.0" promptText="search" style="-fx-background-color: #EBEBEB;">
+                           <font>
+                              <Font size="18.0" />
+                           </font></TextField>
+                        <Button id="search" mnemonicParsing="false" onMouseClicked="#onSearchClick" prefHeight="30.0" prefWidth="30.0">
+                           <graphic>
+                              <SVGPath content="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" fill="#ebebeb" onMouseClicked="#onSearchClick" stroke="BLACK" strokeWidth="2.0" />
+                           </graphic>
+                        </Button>
+                     </items>
+                  </ToolBar>
                </children>
                <BorderPane.margin>
                   <Insets left="50.0" right="50.0" />
@@ -52,7 +61,7 @@
       </BorderPane>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
             <HBox id="titles" alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="520.0" spacing="80.0">
                <children>
@@ -69,7 +78,7 @@
                         <Insets />
                      </HBox.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Budget" textAlignment="CENTER">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Price" textAlignment="CENTER">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -78,13 +87,10 @@
             </HBox>
             <ScrollPane id="announcements_scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" style="-fx-background-color: #FFFFFF;">
                <content>
-                  <VBox fx:id="announcementsVbox" alignment="TOP_CENTER" style="-fx-background-color: #FFFFFF;" />
+                  <VBox fx:id="offersVbox" alignment="TOP_CENTER" style="-fx-background-color: #FFFFFF;" />
                </content>
             </ScrollPane>
          </children>
-         <BorderPane.margin>
-            <Insets top="10.0" />
-         </BorderPane.margin>
       </VBox>
    </center>
 </BorderPane>
