--- a/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/travelAgency/searchAnnouncementsScreen.fxml
+++ b/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/travelAgency/searchAnnouncementsScreen.fxml
@@ -38,7 +38,7 @@
                            <font>
                               <Font size="18.0" />
                            </font></TextField>
-                        <Button id="search" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0">
+                        <Button id="search" mnemonicParsing="false" onMouseClicked="#onSearchClick" prefHeight="30.0" prefWidth="30.0">
                            <graphic>
                               <SVGPath content="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" fill="#ebebeb" onMouseClicked="#onSearchClick" stroke="BLACK" strokeWidth="2.0" />
                            </graphic>
@@ -61,9 +61,9 @@
       </BorderPane>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <HBox id="titles" alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="29.0" prefWidth="520.0" spacing="100.0">
+            <HBox id="titles" alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="520.0" spacing="80.0">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination">
                      <font>
@@ -74,6 +74,9 @@
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </Text>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Budget" textAlignment="CENTER">
                      <font>
@@ -84,20 +87,10 @@
             </HBox>
             <ScrollPane id="announcements_scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" style="-fx-background-color: #FFFFFF;">
                <content>
-                  <VBox fx:id="announcementsVbox" alignment="TOP_CENTER" spacing="10.0" style="-fx-background-color: #FFFFFF;">
-                     <padding>
-                        <Insets bottom="10.0" />
-                     </padding>
-                  </VBox>
+                  <VBox fx:id="announcementsVbox" alignment="TOP_CENTER" style="-fx-background-color: #FFFFFF;" />
                </content>
-               <padding>
-                  <Insets left="40.0" right="40.0" />
-               </padding>
             </ScrollPane>
          </children>
-         <BorderPane.margin>
-            <Insets top="10.0" />
-         </BorderPane.margin>
       </VBox>
    </center>
 </BorderPane>
