--- a/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/travelAgency/searchAnnouncementsScreen.fxml
+++ b/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/travelAgency/searchAnnouncementsScreen.fxml
@@ -38,9 +38,9 @@
                            <font>
                               <Font size="18.0" />
                            </font></TextField>
-                        <Button id="search" mnemonicParsing="false" onMouseClicked="#onSearchClick" prefHeight="30.0" prefWidth="30.0">
+                        <Button id="search" mnemonicParsing="false" onMouseClicked="#onSearchAnnouncementsClick" prefHeight="30.0" prefWidth="30.0">
                            <graphic>
-                              <SVGPath content="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" fill="#ebebeb" onMouseClicked="#onSearchClick" stroke="BLACK" strokeWidth="2.0" />
+                              <SVGPath content="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" fill="#ebebeb" onMouseClicked="#onSearchAnnouncementsClick" stroke="BLACK" strokeWidth="2.0" />
                            </graphic>
                         </Button>
                      </items>
