--- a/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/simpleUser/requestChangesScreen.fxml
+++ b/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/simpleUser/requestChangesScreen.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" style="-fx-background-color: &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;&lt;?import javafx.scene.layout.BorderPane?&gt;&lt;?import javafx.scene.text.Font?&gt;&lt;?import javafx.scene.text.Text?&gt;&lt;BorderPane maxHeight=&quot;-Infinity&quot; minHeight=&quot;-Infinity&quot; prefHeight=&quot;55.0&quot; prefWidth=&quot;600.0&quot; style=&quot;-fx-background-color: E69E0F;&quot; xmlns=&quot;http://javafx.com/javafx/21&quot; xmlns:fx=&quot;http://javafx.com/fxml/1&quot;&gt;   &lt;center&gt;      &lt;Text fill=&quot;WHITE&quot; strokeType=&quot;OUTSIDE&quot; strokeWidth=&quot;0.0&quot; text=&quot;My Holiday&quot; textAlignment=&quot;CENTER&quot; wrappingWidth=&quot;95.73669052124023&quot; BorderPane.alignment=&quot;CENTER&quot;&gt;         &lt;font&gt;            &lt;Font name=&quot;System Bold&quot; size=&quot;14.0&quot; /&gt;         &lt;/font&gt;      &lt;/Text&gt;   &lt;/center&gt;&lt;/BorderPane&gt;;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rt.ispwproject.graphiccontrollers.jfxgraphiccontrollers.RequestChangesGfxControllerJfx">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rt.ispwproject.graphiccontrollers.jfxgraphiccontrollers.RequestChangesGfxControllerJfx">
    <center>
       <ScrollPane id="announcements_scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER">
          <content>
@@ -68,7 +68,7 @@
                         </Button>
                      </right>
                   </BorderPane>
-                  <TextArea id="description_textarea" fx:id="requestedChangesDescriptiontextarea" maxHeight="-Infinity" maxWidth="600.0" minHeight="-Infinity" prefHeight="80.0" prefWidth="500.0" promptText="Requested changes description" style="-fx-background-radius: 4; -fx-border-color: #2B2B2B; -fx-border-radius: 4;" wrapText="true">
+                  <TextArea id="description_textarea" fx:id="requestedChangesDescriptionTextarea" maxHeight="-Infinity" maxWidth="600.0" minHeight="-Infinity" prefHeight="80.0" prefWidth="500.0" promptText="Requested changes description" style="-fx-background-radius: 4; -fx-border-color: #2B2B2B; -fx-border-radius: 4;" wrapText="true">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -411,7 +411,7 @@
                         </HBox>
                         <HBox id="offeredCompanyName" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                            <children>
-                              <Text fx:id="offeredCompanyNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="something" textAlignment="CENTER" wrappingWidth="150.0">
+                              <Text fx:id="offeredTransportCompanyNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="something" textAlignment="CENTER" wrappingWidth="150.0">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -427,7 +427,7 @@
                         </TextField>
                         <HBox id="requestedCompanyChange" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
                            <children>
-                              <CheckBox fx:id="requestedTransportCompanyChangeCheckBox" mnemonicParsing="false" prefHeight="238.0" prefWidth="199.0" text="Request change" textAlignment="CENTER" wrapText="true">
+                              <CheckBox fx:id="requestedTransportChangeCheckBox" mnemonicParsing="false" prefHeight="238.0" prefWidth="199.0" text="Request change" textAlignment="CENTER" wrapText="true">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
