--- a/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/simpleUser/requestChangesScreen.fxml
+++ b/src/main/resources/com/rt/ispwproject/graphiccontrollers/jfxgraphiccontrollers/simpleUser/requestChangesScreen.fxml
@@ -76,7 +76,7 @@
                         <Insets bottom="10.0" left="20.0" right="20.0" />
                      </VBox.margin>
                   </TextArea>
-                  <GridPane id="generalFields" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0">
+                  <GridPane id="generalFields" maxWidth="960.0" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -109,7 +109,7 @@
                               </Text>
                            </children>
                         </HBox>
-                        <HBox id="requestedChangesTitle" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
+                        <HBox id="requestedChangesTitle" alignment="CENTER" maxWidth="300.0" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Requested changes">
                                  <font>
@@ -204,7 +204,7 @@
                         <DatePicker id="requestedReturnDate" fx:id="requestedReturnDatePicker" maxWidth="300.0" prefHeight="30.0" prefWidth="200.0" promptText="Return date" style="-fx-background-color: #EBEBEB; -fx-background-radius: 4; -fx-border-color: #2B2B2B; -fx-border-radius: 4; -fx-font-size: 18;" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
-                  <GridPane id="accommodationFields" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0">
+                  <GridPane id="accommodationFields" maxWidth="960.0" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -329,7 +329,7 @@
                         </HBox>
                      </children>
                   </GridPane>
-                  <GridPane id="transportFields" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0">
+                  <GridPane id="transportFields" maxWidth="960.0" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
